@@ -1,4 +1,11 @@
 *************************************************************
+v2 - 26/03:
+- Changes data structure of workHour response, use array instead of object
+- Use Time data structure instead of string in TimeRange
+- Rename parameters of end and start query
+- All IDs are in UUID format
+- Employee has enum of roles
+*************************************************************
 v1 - 25/03:
 - /stores/{storeId}/teams:
 	- Add id field to response
@@ -7,4 +14,3 @@ v1 - 25/03:
 - Add new endpoint(s):
 	- POST: /stores/{storeId}/book:
 *************************************************************
-	
